--- a/couchsurfing-app/style/index.css
+++ b/couchsurfing-app/style/index.css
@@ -21,10 +21,10 @@ body {
 }
 
 .logo {
-  height: 30px;
+  height: 40px;
   width: 46px;
   background-size: 47px;
-  background-image: url('imag/sofa-logo.png');
+  background-image: url('/assets/img/sofa-logo.svg');
   margin: 20px;
 }
 
